test/implicitDup21_8.slq
def foo(x:ğ”¹){
	z:=dup(x);
	if X(z){ /// error
		r:=H(x);
		forget(z); /// error
	}else{
		r:=x;
	}
	return r;
}
def main()â‡’foo;
